...
) {
    val addExerciseDialogShown = remember { mutableStateOf(false) }

    Column(modifier = modifier.fillMaxSize()) {
        ScreenTitle(
            text = stringResource(R.string.workout_editor_new_workout_screen_title),
            testTag = "screenTitle_Editor"
        )

        Column(
            modifier =
            Modifier
                .weight(1f)
...
