...
) {
    Column(
        modifier = modifier.fillMaxSize()
    ) {
        ScreenTitle(
            text = viewModel.workout.value?.name ?: "Default workout",
            testTag = "screenTitle_Executor"
        )

        LazyColumn(
            verticalArrangement = Arrangement.spacedBy(8.dp),
            contentPadding = PaddingValues(start = 16.dp, end = 16.dp),
            modifier = Modifier.weight(1f)
...
